--- a/view/adminhtml/templates/overview.phtml
+++ b/view/adminhtml/templates/overview.phtml
@@ -1,46 +1,16 @@
 <div class="container" style="max-width:100%;">
     <div class="row">
-        <div class="col-12">
-            <p><strong>Hallo Welt</strong></p>
-            <p>Hello World!</p>
-        </div>
-    </div>
-</div>
-
-<div class="container" style="max-width:100%;">
-    <div class="row">
         <div class="col-6">
-            <canvas id="myChart1"></canvas>
+            test
         </div>
         <div class="col-6">
-            <canvas id="myChart2"></canvas>
-        </div>
-    </div>
-</div>
-
-<div class="container" style="max-width:100%;">
-    <div class="row">
-        <div class="col-6">
-            <canvas id="myChart3"></canvas>
-        </div>
-        <div class="col-6">
-            <canvas id="myChart4"></canvas>
+            test
         </div>
     </div>
 </div>
 
 <script>
-    requirejs(['jquery', 'chartjs'], function($, chart){
-        let canvas1 = document.getElementById('myChart1').getContext('2d');
-        let chart1 = new Chart(canvas1, <?= $block->getChart('standard'); ?>);
-
-        let canvas2 = document.getElementById('myChart2').getContext('2d');
-        let chart2 = new Chart(canvas2, <?= $block->getChart('standard'); ?>);
-
-        let canvas3 = document.getElementById('myChart3').getContext('2d');
-        let chart3 = new Chart(canvas3, <?= $block->getChart('standard'); ?>);
-
-        let canvas4 = document.getElementById('myChart4').getContext('2d');
-        let chart4 = new Chart(canvas4, <?= $block->getChart('standard'); ?>);
+    requirejs(['jquery'], function($){
+        l
     });
 </script>
