--- a/view/frontend/layout/supportrequest_post_index.xml
+++ b/view/frontend/layout/supportrequest_post_index.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <referenceContainer name="content">
-        <block class="JonathanMartz\SupportForm\Block\Index" name="supportrequest_post_index" template="JonathanMartz_SupportForm::index.phtml" />
+        <block class="JonathanMartz\SupportForm\Block\Post" name="supportrequest_post_index"
+               template="JonathanMartz_SupportForm::post.phtml"/>
     </referenceContainer>
 </page>
