--- a/view/frontend/templates/index.phtml
+++ b/view/frontend/templates/index.phtml
@@ -2,32 +2,42 @@
     <div class="row">
         <div class="col-3"></div>
         <div class="col-6">
-            <form>
+            <form action="<?= $block->getPostUrl(); ?>" method="post">
                 <div class="form-group">
                     <label>Type</label>
-                    <select class="form-control">
+                    <select name="type" class="form-control field-type">
                         <option value="general">Anfrage</option>
                         <option value="tech">Technische Anfrage</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>Email address</label>
-                    <input type="email" class="form-control" placeholder="Enter email">
+                    <input required type="email" name="email" class="form-control field-email"
+                           placeholder="Enter email">
                 </div>
                 <div class="form-group">
                     <label>Message</label>
-                    <textarea class="form-control" placeholder="Your Message"></textarea>
+                    <textarea required name="message" class="form-control field-message"
+                              placeholder="Your Message"></textarea>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input">
+                    <input type="checkbox" name="agb" required class="form-check-input field-agb">
                     <label class="form-check-label">
                         AGB
                         <a href="/datenschutz.html" target="_blank">Zur Datenschutz Erklärung</a>
                     </label>
                 </div>
-                <button type="reset" class="btn btn-primary float-right">Reset</button>
-                <button class="btn btn-primary float-right" onclick="goBack()">Back</button>
-                <button type="submit" class="btn btn-primary float-right">Submit</button>
+                <div class="btn-group float-left">
+                    <button type="reset" class="btn btn-primary">Reset</button>
+                    <button class="btn btn-primary" onclick="window.history.back()">Back</button>
+                </div>
+                <div class="form-group d-none">
+                    <input name="botdetect" required class="form-control field-botdetect"
+                           value="<?= $block->getFormKey(); ?>">
+                </div>
+                <div class="btn-group float-right">
+                    <button id="supportSend" type="submit" class="btn btn-primary">Submit</button>
+                </div>
             </form>
         </div>
         <div class="col-3"></div>
