--- a/view/frontend/templates/index.phtml
+++ b/view/frontend/templates/index.phtml
@@ -6,13 +6,9 @@
                 <div class="form-group">
                     <label>Type</label>
                     <select name="type" class="form-control field-type">
-                        <?php var_dump($block->getPostUrl()); ?>
                         <?php foreach($block->getTypes() as $key): ?>
-                            <?php var_dump($key); ?>
+                            <option value="<?= strtolower($key) ?>"><?= ucfirst($key) ?></option>
                         <?php endforeach; ?>
-
-                        <option value="general">Anfrage</option>
-                        <option value="tech">Technische Anfrage</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -37,8 +33,7 @@
                     <button class="btn btn-primary" onclick="window.history.back()">Back</button>
                 </div>
                 <div class="form-group d-none">
-                    <input name="botdetect" required class="form-control field-botdetect"
-                           value="<?= $block->getFormKey(); ?>">
+                    <input name="botdetect" class="form-control field-botdetect">
                 </div>
                 <div class="btn-group float-right">
                     <button id="supportSend" type="submit" class="btn btn-primary">Submit</button>
