--- a/view/frontend/layout/supportrequest_customer_index.xml
+++ b/view/frontend/layout/supportrequest_customer_index.xml
@@ -1,6 +1,10 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
     <update handle="customer_account"/>
+    <head>
+        <title>My Support</title>
+        <css src="JonathanMartz_SupportForm::css/customer_dashboard.css"/>
+    </head>
     <body>
         <referenceBlock name="page.main.title">
             <action method="setPageTitle">
