--- a/view/frontend/layout/supportrequest_index_index.xml
+++ b/view/frontend/layout/supportrequest_index_index.xml
@@ -3,8 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <title>Support Request</title>
-        <css src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" src_type="url"
-             rel="stylesheet" type="text/css"/>
+        <css src="JonathanMartz_SupportForm::css/form.css"/>
     </head>
     <referenceContainer name="content">
         <block class="JonathanMartz\SupportForm\Block\Index" name="supportrequest_index_index"
