--- a/view/frontend/templates/index.phtml
+++ b/view/frontend/templates/index.phtml
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="form-contact">
             <form action="<?= $block->getPostUrl(); ?>" method="post">
                 <div class="form-group">
                     <label>Type</label>
@@ -22,14 +21,15 @@
                               placeholder="Your Message"></textarea>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" name="agb" required class="form-check-input field-agb">
-                    <label class="form-check-label">
+                    <input type="checkbox" name="agb" id="checkbox-agb" required class="form-check-input field-agb">
+                    <label class="form-check-label" for="checkbox-agb">
                         AGB
-                        <a href="/datenschutz.html" target="_blank">Zur Datenschutz Erklärung</a>
+                        <p><a href="/privacy-policy-cookie-restriction-mode/" target="_blank">Zur Datenschutz
+                                Erklärung</a></p>
                     </label>
                 </div>
                 <div class="btn-group float-left">
-                    <button type="reset" class="btn btn-primary">Reset</button>
+                    <button type="reset" class="btn btn-secondary">Reset</button>
                     <button class="btn btn-primary" onclick="window.history.back()">Back</button>
                 </div>
                 <div class="btn-group float-right">
@@ -37,6 +37,5 @@
                 </div>
             </form>
         </div>
-        <div class="col-3"></div>
     </div>
 </div>
